  Sep 13,2010 
* truely support rails 3.0(returning is deprecate function,use tap) deshi(xiaods@gmail.com) 

  Sep 14,2010
* update codebase to support rails3.0 and rspec2


  Oct 8,2010
* update rake.it works now!
