@@ -1,3 +1,6 @@
+  Jan 31, 2011
+* backwards compatibility for rails 2.3.x in rendering callbacks options
+  
   Sep 13,2010 
 * truely support rails 3.0(returning is deprecate function,use tap) deshi(xiaods@gmail.com) 
 
